# agent-usage-atlas

./: README.md  README_CN.md  pyproject.toml
.github/workflows/: publish-homebrew.yml
docs/: demo.tape  index.html
docs/demo/: index.html
docs/specs-innovation-atlas-v03/: expert-review-architecture.md  expert-review-innovation.md  expert-review-performance.md  expert-review-security.md  final-consolidated-opinion.md  patrol-aggregation-report.md  patrol-charts-report.md  patrol-core-report.md  patrol-frontend-core-report.md  patrol-parsers-report.md
scripts/: screenshots.py
src/agent_usage_atlas/: __init__.py  builder.py  cli.py  models.py  server.py  template.py
src/agent_usage_atlas/aggregation/: __init__.py  _context.py  extended.py  insights.py  patterns.py  projects.py  prompts.py  sessions.py  story.py  totals.py  trends.py
src/agent_usage_atlas/commands/: mcp.py
src/agent_usage_atlas/data/: pricing.json
src/agent_usage_atlas/frontend/: index.html
src/agent_usage_atlas/frontend/charts/: BranchActivity.js  CodegenModel.js  CostBreakdownChart.js  CostCalendar.js  CostSankey.js  DailyCostChart.js  DailyTokenChart.js  EfficiencyGauges.js  FileTypes.js  Heatmap.js  ModelCostChart.js  ModelRadar.js  ProjectRanking.js  RoseChart.js  SourceRadar.js  Timeline.js  TokenBurnCurve.js  TokenCalendar.js  TokenSankey.js  ToolRanking.js  TopCommands.js
src/agent_usage_atlas/frontend/components/: ExpensivePrompts.js  Hero.js  InsightCards.js  VaguePrompts.js
src/agent_usage_atlas/parsers/: __init__.py  _base.py  claude.py  codex.py  cursor.py  hermit.py
(+6 files in other folders)
